--- a/po/it.po
+++ b/po/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: osmstats 0.1\n"
 "Report-Msgid-Bugs-To: d.paleino@gmail.com\n"
 "POT-Creation-Date: 2010-11-04 12:18+0100\n"
-"PO-Revision-Date: 2010-11-04 12:22+0100\n"
+"PO-Revision-Date: 2010-11-04 13:04+0100\n"
 "Last-Translator: David Paleino <dapal@debian.org>\n"
 "Language-Team: Italian\n"
 "Language: it\n"
@@ -105,7 +105,7 @@ msgstr "Statistiche OpenStreetMap - %(date)s"
 #: views/key.tmpl:48
 #, python-format
 msgid "Key:%(key)s"
-msgstr "Key:%(key)s"
+msgstr "Chiave:%(key)s"
 
 #: views/key.tmpl:51
 #: views/key.tmpl:54
@@ -214,3 +214,4 @@ msgstr "Relazioni"
 #: views/workinprogress.tmpl:38
 msgid "Work in progress"
 msgstr "Lavori in corso"
+
